share/static/site.css
/* ... */
select#tab_overflow_overlay option.unread {
  font-weight: bold;
}

body {
  font-family: "Lucida Grande", Helvetica, sans-serif;
  background: #fff;
}

a:link, a:visited, a:hover, a:active { color:#0033cc; }

a:hover {
  text-shadow: rgba( 0, 0, 0, .3 ) 0 1px 1px;
}

div.window {
  position:fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 23px;
}

div.window table {
  width: 100%;
  height: 100%;
  padding: 0;
}

tr.input td {
  height: 20px;
  background: #efefef;
  border-bottom: 1px solid #999;
}

tr.vert_dragger td {
  height: 3px;
  background: #efefef;
  border-top: 1px solid #aaa;
}

tr.input textarea {
  width: 100%;
  padding: 3px 0;
  border: none;
  margin: 0;
  outline: 0 none;
  font-size: 12px;
  overflow: hidden;
  resize: none;
  font-family: "Lucida Grande", Helvetica, sans-serif;
}

tr.input input.send {
  display: none;
}

div#tab_container {
  position: fixed;
  bottom: 0px;
  left: 0px;
  right: 0px;
  height: 23px;
  background: #ddd;
  
}

ul#tabs {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 11px;
  position: relative;
  float: left;
  margin-right: 62px;
  padding-left: 3px;
}

ul#tabs li {
  float: left;
  margin: 0;
  margin-left: -1px;
  color: #333;
  background: #ddd;
}

ul#tabs li:first-child div.hit_area {
  border-left: 1px solid #ddd;
}

ul#tabs li div.hit_area {
  border: 1px solid #999;
  border-bottom: none;
  border-top: none;
  float:left;
  height: 14px;
  padding: 2px 10px 8px 4px;
}

ul#tabs li.active div.hit_area {
  border: 1px solid #999;
  border-top: none;
  background: #efefef;
  height: 11px;
  padding-top: 3px;
  margin-top: -1px;
}

ul#tabs li.active {
  height: 23px;
  z-index: 21;
}

ul#tabs li.active:hover div.hit_area {
  background: #efefef;
}

ul#tabs li:hover div.hit_area {
  background: #ccc;
}

ul#controls {
  position: fixed;
  bottom: 0px;
  right: 0px;
  height: 23px;
  margin: 0;
  padding: 0 18px 0 0;
  list-style: none;
}

ul#controls li {
  float: right;
  margin: 0;
  padding: 0;
  height: 16px;
  width: 16px;
  padding: 4px 3px 3px 3px;
  cursor: pointer;
}

ul#controls li:hover {
  background: #ccc;
}

tr.topic td {
  width: 100%;
  background: #efefef;
  font-size: 11px;
  text-align: center;
  border-top: 1px solid #fff;
  border-bottom: 1px solid #aaa;
  padding: 1px 0;
  height: 1.2em;
  overflow: hidden;
}

tr.topic a {
  text-decoration: none;
}

div.message_wrap {
  height: 100%;
  overflow-x: none;
  overflow-y: auto;
  background: #fff;
}

ul.messages {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background: url(image/background.png) top left repeat-y;
  margin: 3px 0;
}

ul.messages li {
  font-size: 13px;
  display: block;
  position: relative;
}

ul.messages li:not(.consecutive) {
  clear: both;
}

ul.messages li.highlight {
  border-right: 5px solid #fffc00;
}

.info ul.messages li.highlight,
ul.messages li.self {
  background: url(image/background-self.png) top left repeat-y #fffbd0;
  border-right: none;
}

.info ul.messages li.highlight div.msg,
ul.messages li.self div.msg {
  background: none;
}

ul.messages li.consecutive div.left {
  display: none;
}

div.left {
  float: left;
  width: 127px;
  font-weight: bold;
  text-align: right;
  padding: 4px 0;
  padding-right: 4px;
  padding-bottom: 0;
  text-overflow: ellipsis;
  position: relative;
}

li.event div.left {
  padding-top: 5px;
}

li.event div.msg {
  border-top: none;
}

ul.messages li.avatar div.left {
  padding-bottom: 3px;
  padding-top: 3px;
}

li.event div.left {
  padding: 5px 0;
  width: 125px;
}

ul.messages li.avatar:not(.consecutive) {
  z-index: 999;
}

div.left img {
  border: 1px solid #fff;
  display: block;
  width: 32px;
  height: 32px;
  float: right;
}

div.left span.nickhint {
  position: absolute;
  z-index: 999;
  right: 5px;
  top: 4px;
  padding: 0 2px;
  min-width: 28px;
  background: rgba(0, 0, 0, 0.5);
  color: #fff;
  text-shadow: rgba( 0, 0, 0, 1 ) 0 1px 1px;
  opacity: 0;
  -webkit-transition: opacity 0.5s ease-in-out;
}

div.timehint {
  position: absolute;
  font-size: 10px;
  right: 0px;
  top: 1px;
  padding: 6px 4px 2px 4px ;
  color: #555;
  opacity: 0;
  text-shadow: rgba(255,255,255,1) 0 0 3px;
  background: #fff;
}

.info ul.messages li.highlight div.timehint,
li.self div.timehint {
  background: #fffbd0;
}

div.msg {
  margin-left: 132px;
  padding: 3px 5px;
  word-wrap: break-word;
  -khtml-line-break: after-white-space;
  -khtml-nbsp-mode: space;
  border-top: 1px solid #eee;
}

li.event div.msg {
  padding: 5px;
}

li.monospace div.msg {
  padding: 6px 5px;
}

li.event + li.message div.msg {
  border-top: 1px solid transparent;
}

ul.messages li:first-child div.msg {
  border-top: 1px solid transparent;
}

/* so the last avatar doesn't hang off the edge */
ul.messages li.avatar:not(.consecutive):last-child {
  min-height: 42px;
}

ul.messages li.monospace {
  min-height: 0px;
}

ul.messages li.message:last-child {
  border-bottom: 1px solid #eee;
}

ul.messages li.consecutive div.msg {
  border-top: none;
}

ul.messages li + li.consecutive div.msg {
  padding-top: 0px;
}

div.msg a {
  word-break: break-all;
}

div.msg img {
  display: block;
  border: none;
}

ul.messages li.monospace + li.monospace.consecutive {
  margin-top: -5px;
}

ul.messages li.monospace div.msg {
  font-family: Monaco, monospace;
  font-size: 10px;
  line-height: 12px;
  word-wrap: normal;
  white-space: pre-wrap;
}

li.monospace span[style*="bold"] div.msg {
  letter-spacing: -1px;
}

ul.messages li.event {
  font-size: 11px;
  background: #d9e7fb;
  border-bottom: 1px solid #fff;
}

ul.messages li.event.notice {
  background: #eb2222;
  color: #fff;
}

ul.messages li.event.notice a {
  color: #fffc00;
  text-decoration: none;
}

ul.messages li.event.notice a:hover{
  text-shadow: none;
}

ul.messages li.event.happynotice {
  background: #3fc842;
  color: #fff;
}

ul.messages li.event div.msg {
  background: none;
  border-left: none;
}
/* ... */

